# pybag

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh  build_util.sh  compile_commands.json  gen_stubs.sh  make_docs.sh  print_docs.py  print_help.sh  run_test.sh  run_test_cbag.sh  setup.cfg  setup.py
docs/: .gitignore  Makefile
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  pybag.base.util.interval.rst
src/pybag/: __init__.py  bbox.cpp  bbox.h  bbox_array.cpp  bbox_array.h  bbox_collection.cpp  bbox_collection.h  core.cpp  core.pyi  enum.py  enum_conv.cpp  enum_conv.h  gds.cpp  gds.h  geometry.cpp  geometry.h  grid.cpp  grid.h  interval.cpp  interval.h  lay_objects.cpp  lay_objects.h  layout.cpp  layout.h  logging.cpp  logging.h  name.cpp  name.h  oa.cpp  oa.h  py_pt_vector.h  rtree.cpp  rtree.h  schematic.cpp  schematic.h  tech.cpp  tech.h  transform.cpp  transform.h  typedefs.h
tests/layout/: conftest.py  test_grid.py  test_layout.py
tests/schematic/: test_cellview.py
tests/schematic/data/: inv.yaml
tests/util/: test_bbox.py  test_bbox_array.py  test_interval.py  test_name.py  test_rtree.py  test_transform.py
